tmpja2w2d2z/storage/893f7a23-1b57-4d54-9623-db7d51c56b37/compute_logs/hptafuir.err
[32m2022-12-02 16:37:08 -0500[0m - dagster - [34mDEBUG[0m - matriz_data - 893f7a23-1b57-4d54-9623-db7d51c56b37 - 36743 - LOGS_CAPTURED - Started capturing logs in process (pid: 36743).
[32m2022-12-02 16:37:08 -0500[0m - dagster - [34mDEBUG[0m - matriz_data - 893f7a23-1b57-4d54-9623-db7d51c56b37 - 36743 - load_table - STEP_START - Started execution of step "load_table".
/Users/fabio/Documents/dagster_home/etldagster/etldagster/ops/etl.py:23: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
  df.to_sql('matrizinfo', conn, if_exists='append')
[32m2022-12-02 16:37:09 -0500[0m - dagster - [34mERROR[0m - [31mmatriz_data - 893f7a23-1b57-4d54-9623-db7d51c56b37 - 36743 - load_table - STEP_FAILURE - Execution of step "load_table" failed.

dagster._core.errors.DagsterExecutionStepExecutionError: Error occurred while executing op "load_table"::

pandas.errors.DatabaseError: Execution failed on sql 'SELECT name FROM sqlite_master WHERE type='table' AND name=?;': syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^


Stack Trace:
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/dagster/_core/execution/plan/utils.py", line 47, in solid_execution_error_boundary
    yield
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/dagster/_utils/__init__.py", line 447, in iterate_with_context
    next_output = next(iterator)
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/dagster/_core/execution/plan/compute_generator.py", line 74, in _coerce_solid_compute_fn_to_iterator
    result = fn(context, **kwargs) if context_arg_provided else fn(**kwargs)
  File "/Users/fabio/Documents/dagster_home/etldagster/etldagster/ops/etl.py", line 23, in load_table
    df.to_sql('matrizinfo', conn, if_exists='append')
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/core/generic.py", line 2987, in to_sql
    return sql.to_sql(
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 695, in to_sql
    return pandas_sql.to_sql(
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 2187, in to_sql
    table.create()
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 827, in create
    if self.exists():
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 814, in exists
    return self.pd_sql.has_table(self.name, self.schema)
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 2195, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 2030, in execute
    raise ex from exc

The above exception was caused by the following exception:
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...ELECT name FROM sqlite_master WHERE type='table' AND name=?;
                                                                      ^


Stack Trace:
  File "/Users/fabio/miniforge3/envs/dagsterETL/lib/python3.9/site-packages/pandas/io/sql.py", line 2018, in execute
    cur.execute(*args, **kwargs)
[0m
